# lsp-cpp

./: .gitignore  CMakeLists.txt  README.md
lsp/: CMakeLists.txt
lsp/include/lsp/: client.h  iolayer.h  json.hpp  protocol.h  transport.h  uri.h
lsp/src/: iolayer.cpp  protocol.cpp  transport.cpp
test/: CMakeLists.txt
test/src/: main.cpp
